--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     </head>
     <body>
         <header>
-
+            <h1>Ryan O'Donohue</h1>
+            <nav>
+                <ul>
+                    <li>GitHub</li>
+                    <li>LinkedIn</li>
+                    <li>About Me</li>
+                    <li>Projects</li>
+                    <li>Contact</li>
+                </ul>
+            </nav>
         </header>
         <main>
 
