--- a/index.html
+++ b/index.html
@@ -11,15 +11,33 @@
             <h1>Ryan O'Donohue</h1>
             <nav>
                 <ul>
-                    <li>GitHub</li>
-                    <li>LinkedIn</li>
-                    <li>About Me</li>
-                    <li>Projects</li>
-                    <li>Contact</li>
+                    <li><a href="https://github.com/RyeBowTie">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/ryan-o-donohue-b43849204/">LinkedIn</a></li>
+                    <li><a href="#about-me">About Me</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </header>
         <main>
+            <section class="about-me" id="about-me">
+                <h2>About Me</h2>
+                <p>
+                    
+                </p>
+            </section>
+            <section class="projects" id="projects">
+                <a href="#"><img src=""></a>
+                <a href="#"><img src=""></a> 
+                <a href="#"><img src=""></a> 
+                <a href="#"><img src=""></a> 
+                <a href="#"><img src=""></a> 
+                <a href="#"><img src=""></a>            
+            </section>
+            <section class="contact" id="contact">
+                <h3>Phone: (555) 555-5555</h3>
+                <h3>Email: example@gamil.com</h3>
+            </section>
 
         </main>
         <footer>
