rearrange contact links and added images to project anchor tags

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
             <h1>Ryan O'Donohue</h1>
             <nav>
                 <ul>
-                    <li><a href="https://github.com/RyeBowTie">GitHub</a></li>
-                    <li><a href="https://www.linkedin.com/in/ryan-o-donohue-b43849204/">LinkedIn</a></li>
                     <li><a href="#about-me">About Me</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -22,21 +20,23 @@
         <main>
             <section class="about-me" id="about-me">
                 <h2>About Me</h2>
+                <img src="./assets/Images/profile-picture.jpg">
                 <p>
                     
                 </p>
             </section>
             <section class="projects" id="projects">
-                <a href="#"><img src=""></a>
-                <a href="#"><img src=""></a> 
-                <a href="#"><img src=""></a> 
-                <a href="#"><img src=""></a> 
-                <a href="#"><img src=""></a> 
-                <a href="#"><img src=""></a>            
+                <a href="#"><img src="./assets/Images/cat1.jfif"></a>
+                <a href="#"><img src="./assets/Images/cat2.jfif"></a> 
+                <a href="#"><img src="./assets/Images/cat3.jfif"></a> 
+                <a href="#"><img src="./assets/Images/cat4.jfif"></a> 
+                <a href="#"><img src="./assets/Images/cat5.jfif"></a>            
             </section>
             <section class="contact" id="contact">
                 <h3>Phone: (555) 555-5555</h3>
                 <h3>Email: example@gamil.com</h3>
+                <a href="https://github.com/RyeBowTie">GitHub</a>
+                <a href="https://www.linkedin.com/in/ryan-o-donohue-b43849204/">LinkedIn</a>
             </section>
 
         </main>
