--- a/index.html
+++ b/index.html
@@ -19,13 +19,24 @@
     </header>
     <main>
         <section class="about-me" id="about-me">
-            <h2>About Me</h2>
-            <img src="./assets/Images/profile-picture.jpg">
-            <p>
-
-            </p>
+            <div class="my-picture">
+                <h2>About Me</h2>
+                <img src="./assets/Images/profile-picture.jpg">
+            </div>
+            <div class="biography">                
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer laoreet quis est sit amet molestie. Aliquam neque sapien, mattis quis iaculis a, placerat sit amet elit. Nunc id justo aliquet, consectetur libero ac, aliquam mauris. Sed condimentum condimentum nisi eu porttitor. Praesent sodales, mauris eget malesuada tempus, massa felis semper purus, eu laoreet quam metus a mauris. Nulla facilisi. Vestibulum elementum tellus eu velit cursus, posuere pharetra justo tincidunt. Cras arcu quam, dignissim in rhoncus ac, auctor in arcu. Suspendisse viverra enim ut mauris pretium, vitae rutrum felis ultrices. Donec eu neque in velit elementum rhoncus vel eget ipsum.
+                </p>
+                <p>
+                    In commodo ante nec erat fringilla euismod. Aliquam luctus tortor gravida tellus laoreet ullamcorper eget ut odio. Integer porta, nibh semper efficitur ullamcorper, augue magna blandit metus, at feugiat quam enim eget leo. Maecenas non eleifend augue. Aenean porta ultricies feugiat. Nam nec sagittis erat. Donec rhoncus mauris cursus ultricies hendrerit. Proin a mauris quis urna sodales tempus quis cursus lectus. Suspendisse imperdiet justo imperdiet nibh finibus, id facilisis arcu pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus tempus ut massa vel congue.
+                </p>
+                <p>
+                    In commodo ante nec erat fringilla euismod. Aliquam luctus tortor gravida tellus laoreet ullamcorper eget ut odio. Integer porta, nibh semper efficitur ullamcorper, augue magna blandit metus, at feugiat quam enim eget leo. Maecenas non eleifend augue. Aenean porta ultricies feugiat. Nam nec sagittis erat. Donec rhoncus mauris cursus ultricies hendrerit. Proin a mauris quis urna sodales tempus quis cursus lectus. Suspendisse imperdiet justo imperdiet nibh finibus, id facilisis arcu pretium. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus tempus ut massa vel congue.
+                </p>
+            </div>
         </section>
         <section class="projects" id="projects">
+            <h2>Projects</h2>
             <a href="#"><img src="./assets/Images/cat1.jfif"></a>
             <a href="#"><img src="./assets/Images/cat2.jfif"></a>
             <a href="#"><img src="./assets/Images/cat3.jfif"></a>
@@ -33,6 +44,7 @@
             <a href="#"><img src="./assets/Images/cat5.jfif"></a>
         </section>
         <section class="contact" id="contact">
+            <h2>Contact</h2>
             <h3>Phone: (555) 555-5555</h3>
             <h3>Email: example@gamil.com</h3>
             <a href="https://github.com/RyeBowTie">GitHub</a>
