--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Ryan O'Donohue Portfolio</title>
     <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="./assets/style.css">
+    
 </head>
 
 <body>
@@ -18,12 +19,10 @@
         </nav>
     </header>
     <main>
+        <h2>About Me</h2>
         <section class="about-me" id="about-me">
-            <div class="my-picture">
-                <h2>About Me</h2>
+            <div class="biography">  
                 <img src="./assets/Images/profile-picture.jpg">
-            </div>
-            <div class="biography">                
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer laoreet quis est sit amet molestie. Aliquam neque sapien, mattis quis iaculis a, placerat sit amet elit. Nunc id justo aliquet, consectetur libero ac, aliquam mauris. Sed condimentum condimentum nisi eu porttitor. Praesent sodales, mauris eget malesuada tempus, massa felis semper purus, eu laoreet quam metus a mauris. Nulla facilisi. Vestibulum elementum tellus eu velit cursus, posuere pharetra justo tincidunt. Cras arcu quam, dignissim in rhoncus ac, auctor in arcu. Suspendisse viverra enim ut mauris pretium, vitae rutrum felis ultrices. Donec eu neque in velit elementum rhoncus vel eget ipsum.
                 </p>
@@ -35,18 +34,33 @@
                 </p>
             </div>
         </section>
+        <h2>Projects</h2>
         <section class="projects" id="projects">
-            <h2>Projects</h2>
-            <a href="#"><img src="./assets/Images/cat1.jfif"></a>
-            <a href="#"><img src="./assets/Images/cat2.jfif"></a>
-            <a href="#"><img src="./assets/Images/cat3.jfif"></a>
-            <a href="#"><img src="./assets/Images/cat4.jfif"></a>
-            <a href="#"><img src="./assets/Images/cat5.jfif"></a>
+            <div>
+                <h3>Project 1</h3>
+                <a href="#"><img src="./assets/Images/cat1.jfif"></a>
+            </div>
+            <div>
+                <h3>Project 2</h3>
+                <a href="#"><img src="./assets/Images/cat2.jfif"></a>
+            </div>
+            <div>
+                <h3>Project 3</h3>
+                <a href="#"><img src="./assets/Images/cat3.jfif"></a>
+            </div>
+            <div>
+                <h3>Project 4</h3>
+                <a href="#"><img src="./assets/Images/cat4.jfif"></a>
+            </div>
+            <div>
+                <h3>Project 5</h3>
+                <a href="#"><img src="./assets/Images/cat5.jfif"></a>
+            </div>
         </section>
+        <h2>Contact</h2>
         <section class="contact" id="contact">
-            <h2>Contact</h2>
             <h3>Phone: (555) 555-5555</h3>
-            <h3>Email: example@gamil.com</h3>
+            <h3>Email: example@gmail.com</h3>
             <a href="https://github.com/RyeBowTie">GitHub</a>
             <a href="https://www.linkedin.com/in/ryan-o-donohue-b43849204/">LinkedIn</a>
         </section>
