added google font style

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Ryan O'Donohue Portfolio</title>
     <link rel="stylesheet" href="./assets/reset.css">
     <link rel="stylesheet" href="./assets/style.css">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Rubik:ital,wght@1,600&family=Shippori+Mincho&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -36,23 +37,23 @@
         </section>
         <h2>Projects</h2>
         <section class="projects" id="projects">
-            <div>
+            <div class="project">
                 <h3>Project 1</h3>
                 <a href="#"><img src="./assets/Images/cat1.jfif"></a>
             </div>
-            <div>
+            <div class="project">
                 <h3>Project 2</h3>
                 <a href="#"><img src="./assets/Images/cat2.jfif"></a>
             </div>
-            <div>
+            <div class="project">
                 <h3>Project 3</h3>
                 <a href="#"><img src="./assets/Images/cat3.jfif"></a>
             </div>
-            <div>
+            <div class="project">
                 <h3>Project 4</h3>
                 <a href="#"><img src="./assets/Images/cat4.jfif"></a>
             </div>
-            <div>
+            <div class="project">
                 <h3>Project 5</h3>
                 <a href="#"><img src="./assets/Images/cat5.jfif"></a>
             </div>
