added alt tags to images.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>About Me</h2>
         <section class="about-me" id="about-me">
             <div class="biography">  
-                <img src="./assets/Images/profile-picture.jpg">
+                <img src="./assets/Images/profile-picture.jpg" alt="Picture of Ryan O'Donohue.">
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer laoreet quis est sit amet molestie. Aliquam neque sapien, mattis quis iaculis a, placerat sit amet elit. Nunc id justo aliquet, consectetur libero ac, aliquam mauris. Sed condimentum condimentum nisi eu porttitor. Praesent sodales, mauris eget malesuada tempus, massa felis semper purus, eu laoreet quam metus a mauris. Nulla facilisi. Vestibulum elementum tellus eu velit cursus, posuere pharetra justo tincidunt. Cras arcu quam, dignissim in rhoncus ac, auctor in arcu. Suspendisse viverra enim ut mauris pretium, vitae rutrum felis ultrices. Donec eu neque in velit elementum rhoncus vel eget ipsum.
                 </p>
@@ -39,23 +39,23 @@
         <section class="projects" id="projects">
             <div class="project">
                 <h3>Project 1</h3>
-                <a href="#"><img src="./assets/Images/cat1.jfif"></a>
+                <a href="#"><img src="./assets/Images/cat1.jfif" alt="Placeholder image of cat."></a>
             </div>
             <div class="project">
                 <h3>Project 2</h3>
-                <a href="#"><img src="./assets/Images/cat2.jfif"></a>
+                <a href="#"><img src="./assets/Images/cat2.jfif" alt="Placeholder image of cat."></a>
             </div>
             <div class="project">
                 <h3>Project 3</h3>
-                <a href="#"><img src="./assets/Images/cat3.jfif"></a>
+                <a href="#"><img src="./assets/Images/cat3.jfif" alt="Placeholder image of cat."></a>
             </div>
             <div class="project">
                 <h3>Project 4</h3>
-                <a href="#"><img src="./assets/Images/cat4.jfif"></a>
+                <a href="#"><img src="./assets/Images/cat4.jfif" alt="Placeholder image of cat."></a>
             </div>
             <div class="project">
                 <h3>Project 5</h3>
-                <a href="#"><img src="./assets/Images/cat5.jfif"></a>
+                <a href="#"><img src="./assets/Images/cat5.jfif" alt="Placeholder image of cat."></a>
             </div>
         </section>
         <h2>Contact</h2>
