changed placeholder links to acutaly links to my projects.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="#about-me">About Me</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
+            <a href="./assets/_Ryan O'Donohue Resume 2021.pdf" download="Ryan-O'Donohue-Resume.pdf">Resume</a>
         </nav>
     </header>
     <main>
@@ -38,24 +39,24 @@
         <h2>Projects</h2>
         <section class="projects" id="projects">
             <div class="project">
-                <h3>Project 1</h3>
-                <a href="#"><img src="./assets/Images/cat1.jfif" alt="Placeholder image of cat."></a>
+                <h3>Avoiding the Kar Krashians</h3>
+                <a href="https://ryebowtie.github.io/Car-Crashians/"><img src="./assets/Images/Project1a.png" alt="Screen Shot of project."></a>
             </div>
             <div class="project">
-                <h3>Project 2</h3>
-                <a href="#"><img src="./assets/Images/cat2.jfif" alt="Placeholder image of cat."></a>
+                <h3>Weather Forecast</h3>
+                <a href="https://ryebowtie.github.io/Ryan-weather-forecaster-/"><img src="./assets/Images/Forecast2.png" alt="Screen Shot of project."></a>
             </div>
             <div class="project">
-                <h3>Project 3</h3>
-                <a href="#"><img src="./assets/Images/cat3.jfif" alt="Placeholder image of cat."></a>
+                <h3>JavaScript Quiz</h3>
+                <a href="https://ryebowtie.github.io/Ryan-s-Javascript-Quiz/."><img src="./assets/Images/Quiz1.png" alt="Screen Shot of project."></a>
             </div>
             <div class="project">
-                <h3>Project 4</h3>
-                <a href="#"><img src="./assets/Images/cat4.jfif" alt="Placeholder image of cat."></a>
+                <h3>Daily Planner</h3>
+                <a href="https://ryebowtie.github.io/Ryan-Daily-Schedule/."><img src="./assets/Images/DailyPlanner1.png" alt="Screen Shot of project."></a>
             </div>
             <div class="project">
-                <h3>Project 5</h3>
-                <a href="#"><img src="./assets/Images/cat5.jfif" alt="Placeholder image of cat."></a>
+                <h3>Password Generator</h3>
+                <a href="https://ryebowtie.github.io/Ryan-Password-Generator/"><img src="./assets/Images/password-generator1.png" alt="Screen Shot of project."></a>
             </div>
         </section>
         <h2>Contact</h2>
