--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
         <h2>Projects</h2>
         <section class="projects" id="projects">
             <div class="project">
-                <h3>Avoiding the Kar Krashians</h3>
+                <a href="https://github.com/RyeBowTie/Car-Crashians"><h3>Avoiding the Kar Krashians</h3></a>
                 <a href="https://ryebowtie.github.io/Car-Crashians/"><img src="./assets/Images/Project1a.png" alt="Screen Shot of project."></a>
             </div>
             <div class="project">
-                <h3>Weather Forecast</h3>
-                <a href="https://ryebowtie.github.io/Ryan-weather-forecaster-/"><img src="./assets/Images/Forecast2.png" alt="Screen Shot of project."></a>
+                <a href="https://github.com/RyeBowTie/Ryan-Tech-Blog"><h3>Tech Blog</h3></a>
+                <a href="http://ryantechblog.herokuapp.com/"><img src="" alt="Screen Shot of project."></a>
             </div>
             <div class="project">
-                <h3>JavaScript Quiz</h3>
+                <a href="https://github.com/RyeBowTie/Ryan-s-Javascript-Quiz"><h3>JavaScript Quiz</h3></a>
                 <a href="https://ryebowtie.github.io/Ryan-s-Javascript-Quiz/."><img src="./assets/Images/Quiz1.png" alt="Screen Shot of project."></a>
             </div>
             <div class="project">
-                <h3>Daily Planner</h3>
-                <a href="https://ryebowtie.github.io/Ryan-Daily-Schedule/."><img src="./assets/Images/DailyPlanner1.png" alt="Screen Shot of project."></a>
+                <a href="https://github.com/RyeBowTie/Ryan-Team-Profile-Generator"><h3>Team Profile Generator</h3></a>
+                <a href="https://github.com/RyeBowTie/Ryan-Team-Profile-Generator"><img src="./assets/Images/3.png" alt="Screen Shot of project."></a>
             </div>
             <div class="project">
-                <h3>Password Generator</h3>
-                <a href="https://ryebowtie.github.io/Ryan-Password-Generator/"><img src="./assets/Images/password-generator1.png" alt="Screen Shot of project."></a>
+                <a href="https://github.com/RyeBowTie/Ryan-weather-forecaster-"><h3>Weather Forcaster</h3></a>
+                <a href="https://ryebowtie.github.io/Ryan-weather-forecaster-/"><img src="./assets/Images/Forecast2.png" alt="Screen Shot of project."></a>
             </div>
         </section>
         <h2>Contact</h2>
