added screenshot to techblog link.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="project">
                 <a href="https://github.com/RyeBowTie/Ryan-Tech-Blog"><h3>Tech Blog</h3></a>
-                <a href="http://ryantechblog.herokuapp.com/"><img src="" alt="Screen Shot of project."></a>
+                <a href="http://ryantechblog.herokuapp.com/"><img src="./assets/Images/main-loggedin.png" alt="Screen Shot of project."></a>
             </div>
             <div class="project">
                 <a href="https://github.com/RyeBowTie/Ryan-s-Javascript-Quiz"><h3>JavaScript Quiz</h3></a>
